improved image display panel (show test, reference and diff images + zoom in/out) + added regression tests (ductus, pisces reference images)