@@ -8,14 +8,26 @@ JAVA_OPTS="-server -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
 #JAVA_TUNING=" -Xms256m  -Xmx256m -XX:-TieredCompilation"
 #JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+TieredCompilation"
 #JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+AggressiveOpts -XX:CompileThreshold=1000"
-JAVA_TUNING=" -Xms2048m  -Xmx2048m"
+
+JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseConcMarkSweepGC"
+#JAVA_TUNING=" -Xms2048m  -Xmx2048m -ea -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC"
 
 # MapBench:
 CLASSPATH=$MAP_BENCH_JAR
 
-# Marlin 0.3 in lib folder:
-BOOTCLASSPATH="-Xbootclasspath/p:$MARLIN_JAR_PREFIX.jar"
-JAVA_OPTS="-Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine $JAVA_OPTS"
+# Marlin renderer in lib folder:
+BOOTCLASSPATH="-Xbootclasspath/a:$MARLIN_JAR_PREFIX.jar"
+
+# Optional Marlin java2d patch in lib folder:
+BOOTCLASSPATH="-Xbootclasspath/p:$MARLIN_JAR_PREFIX-sun-java2d.jar $BOOTCLASSPATH"
+
+# Marlin tuning options:
+USE_TL=true
+SIZE=2048
+# larger pixelsize best for images ~ 8192x8192
+#SIZE=8192
+
+JAVA_OPTS="-Dsun.java2d.renderer.useThreadLocal=$USE_TL -Dsun.java2d.renderer.pixelsize=$SIZE -Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine $JAVA_OPTS"
 
 echo "CP:      $CLASSPATH"
 echo "Boot CP: $BOOTCLASSPATH"
